可以选择文件力！（然而没有给编辑页面写返回按钮）

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,8 @@
         <file>main.qml</file>
         <file>Toast.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>Android_ui.qml</file>
+        <file>Android_editor_page.qml</file>
+        <file>Android_file_manager_page.qml</file>
     </qresource>
 </RCC>
